--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,7 +21,7 @@
                 <div class="col-md-12 d-flex flex-column align-center">
                   <div class="input-email">
                     <i class="far fa-envelope"></i>
-                    <input [(ngModel)]="usuarioLogin.usuario" name="email" type="text" placeholder="Email">
+                    <input [(ngModel)]="usuarioLogin.usuario" name="email" type="text" placeholder="E-mail">
                   </div>
                   <div class="input-senha">
                     <i class="fas fa-lock"></i>
@@ -45,10 +45,10 @@
       <div class="row ml-0 mr-0 cartao-visita-texto">
         <div class="col-md-12">
           <h1>Welcome Back!</h1>
-          <p> Colecione momentos e viva novas experiências.</p>
+          <p> Experiencie cenários reais, encontre sua nova jornada profissional.</p>
         </div>
         <div class="button-cartao">
-          <button routerLink='/cadastrar'>Cadastrar</button>
+          <button routerLink='/cadastrar'>Cadastre-se</button>
         </div>
       </div>
     </section>
