--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid banner-tema">
+  <a routerLink='/inicio' class="button-left"><i class="fas fa-arrow-left"></i></a>
   <div class="row caixa-busca d-flex align-items-center justify-content-center position-relative">
     <a routerLink='/inicio'><i class="fas fa-arrow-left mt-4 ml-2 position-absolute"></i></a>
     <div class="col-md-7">
