--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -16,7 +16,7 @@
         <div class="elemento-4"></div>
         <div class="row ml-0 mr-0 cartao-visita-texto">
           <div class="col-md-12">
-            <h1>Hello, Friend!</h1>
+            <h1>Hey, #getters</h1>
             <p>Novos rumos, novas experiências e um único objetivo!</p>
           </div>
           <div class="button-cartao">
@@ -35,7 +35,7 @@
             </div>
             <div class="input">
               <i class="far fa-envelope icons-left-2"></i>
-              <input [(ngModel)]='usuario.usuario' name="usuario" type="text" placeholder="Email">
+              <input [(ngModel)]='usuario.usuario' name="usuario" type="text" placeholder="E-mail">
             </div>
             <div class="input">
               <i class="fas fa-lock icons-left-3"></i>
@@ -45,7 +45,7 @@
 
             <div class="input">
               <i class="fas fa-lock icons-left-4"></i>
-              <input [(ngModel)]="usuario.senha" name="Confirmasenha" type="password" placeholder="Confima Senha">
+              <input [(ngModel)]="usuario.senha" name="Confirmasenha" type="password" placeholder="Confime sua Senha">
               <!-- <a href=""><i class="far fa-eye"></i></a> -->
             </div>
 
