--- a/src/app/delete/postagem/postagem.component.html
+++ b/src/app/delete/postagem/postagem.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid caixa-deleter d-flex justify-content-center align-items-center flex-column position-relative">
+  <a (click)='voltar()' class="button-left"><i class="fas fa-arrow-left"></i></a>
   <img  class="position-absolute img-persona-1" src="https://i.imgur.com/mkFpuVq.png" alt="">
   <img  class="position-absolute img-persona-2" src="https://i.imgur.com/EUGMPeB.png" alt="">
   <img  class="position-absolute img-persona-3" src="https://i.imgur.com/WLJsx0X.png" alt="">
@@ -35,7 +36,7 @@
 
   <div class="row mt-4">
     <div class="col-md-12 d-flex justify-content-center ">
-      <button type="button" class="btn btn-1" routerLink='/inicio'>Cancelar</button>
+      <button (click)='voltar()' type="button" class="btn btn-1" routerLink='/inicio'>Cancelar</button>
       <button class="btn-2" (click)='apagar()'>Apagar</button>
     </div>
   </div>
