--- a/src/app/edit/usuario-edit/usuario-edit.component.css
+++ b/src/app/edit/usuario-edit/usuario-edit.component.css
@@ -5,7 +5,15 @@
   height: 100vh;
 }
 
-
+a.button-left{
+  z-index: 1000;
+  color: rgba(0, 0, 0, 0.589);
+  position: absolute;
+  top: 11%;
+  left: 5%;
+  font-size: 24px;
+  padding: 8px;
+}
 
 .caixa-input {
   background: rgba(245, 245, 245, 0.397);
