--- a/src/app/edit/usuario-edit/usuario-edit.component.html
+++ b/src/app/edit/usuario-edit/usuario-edit.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid position-relative edit">
+  <a routerLink='/inicio' class="button-left"><i class="fas fa-arrow-left"></i></a>
   <img class="position-absolute waves-1 d-none d-md-block" src="https://i.imgur.com/HKGQmPA.png" alt="">
   <img class="position-absolute waves-2 d-none d-md-block" src="https://i.imgur.com/lQE1Yzl.png" alt="">
 
