Adicionando um novo footer e alterando funcionalidades do ScrollTrigger

--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -79,13 +79,13 @@
           <div class="form-group input-contato">
 
             <label for="">Nome:</label>
-            <input type="text" name="nome-input" class="form-control" placeholder="Informe o seu nome">
+            <input type="text" name="nome-input" class="form-control" placeholder="Informe o seu nome" id="nome">
 
             <label for="">E-mail:</label>
-            <input type="text" name="nome-input" class="form-control" placeholder="Informe o seu E-mail">
+            <input type="text" name="nome-input" class="form-control" placeholder="Informe o seu E-mail" id="email">
 
             <label for="">Mensagem:</label>
-            <textarea type="text" name="nome-input" class="form-control" placeholder="Nos conte o motivo do seu contato"
+            <textarea type="text" name="nome-input" class="form-control" placeholder="Nos conte o motivo do seu contato" id='descricao'
               aria-expanded="false" rows="4"></textarea>
           </div>
         </div>
