--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,8 +3,8 @@
     <a href=""><img src="https://i.imgur.com/SKyw9eR.png" alt=""></a>
   </div>
   <div class="links ">
-    <a href="">Seja um mentor</a>
-    <a href="">Quem somos</a>
+    <a href="#mentores">Seja um mentor</a>
+    <a href="#desenvolvedores">Quem somos</a>
     <a routerLink='/contato'>Contato</a>
   </div>
   <div class="register ">
@@ -35,7 +35,7 @@
     <div class="circlue-4 d-sm-block"></div>
     <img class="icon-mouse d-none d-sm-block" src="../../assets/Icons/mouse.png" alt="">
   </section>
-  <div class="container-fluid content-1 ">
+  <div class="container-fluid content-1">
     <section>
       <img class="vetor-1 img-fluid" src="https://i.imgur.com/7lnMEhN.png" alt="">
       <img class="vetor-2 img-fluid" src="https://i.imgur.com/FAfh48o.png" alt="">
@@ -57,7 +57,7 @@
       </div>
     </section>
   </div>
-  <div class="conatiner-fluid content-2 ">
+  <div class="conatiner-fluid content-2" id='mentores'>
     <div class="row titulo-mentoria ">
       <div class="col-md-6 ">
         <h2>Benefícios da
@@ -66,7 +66,9 @@
     </div>
     <div class="row texto-mentoria  ">
       <div class="col-md-6 ">
-        <h4><span> " </span> Uma oportunidade para jovens aprenderem por meio de caminhos trilhados por profissionais de referência em suas carreiras. Ela está vinculada com a expansão da rede de contatos, a saída da zona de conforto e o aumento das perspectivas!<span> " </span> </h4>
+        <h4><span> " </span> Uma oportunidade para jovens aprenderem por meio de caminhos trilhados por profissionais de
+          referência em suas carreiras. Ela está vinculada com a expansão da rede de contatos, a saída da zona de
+          conforto e o aumento das perspectivas!<span> " </span> </h4>
       </div>
     </div>
     <div class="img-mentor">
@@ -77,7 +79,7 @@
       <img src="https://i.imgur.com/Lt0mLyj.png" alt="">
     </div>
   </div>
-  <div class="categorias mt-5">
+  <div class="categorias mt-5 borda">
     <!-- <a class="link-categoria " href="">Explore novos caminhos</a> -->
     <h4 class="texto-categoria">Explore novos caminhos</h4>
     <div class="row m-0 p-0 categoria-itens ">
@@ -121,8 +123,9 @@
       <div class="circlue-categoria-2"></div>
       <div class="col-md-6 ml-5 texto-categoria-2">
         <h2 class='titulo-categoria'>Redescubra-se</h2>
-        <p class="paragrafo-padrao">Através da Place2Getter você contará com diversos conteúdos que irão te inspirar e incentivar
-           na transformação do seu futuro profissional.</p>
+        <p class="paragrafo-padrao">Através da Place2Getter você contará com diversos conteúdos que irão te inspirar e
+          incentivar
+          na transformação do seu futuro profissional.</p>
       </div>
     </div>
   </div>
@@ -138,7 +141,8 @@
           experiências </h2>
         <div class="row  m-0 p-0-mentoria">
           <div class="col-md-10">
-            <p class="paragrafro-mentoria"> Compartilhe suas experiências com os jovens que estão em busca de ingressar, mudar e 
+            <p class="paragrafro-mentoria"> Compartilhe suas experiências com os jovens que estão em busca de ingressar,
+              mudar e
               recomeçar suas carreiras no mercado de trabalho.</p>
           </div>
         </div>
@@ -151,15 +155,15 @@
     <div class="container-fluid">
       <div class="row d-flex justify-content-center">
         <div class="col-md-3 ml-5 d-flex pt-5 justify-content-center position-relative">
-          <img class="impacto-img img-fluid" src="https://i.imgur.com/BrBQC1a.jpg" alt="">
+          <img class="impacto-img img-fluid" src="https://i.imgur.com/wwfP47W.jpg" alt="">
           <div class="caixa-persona box-color position-absolute"></div>
         </div>
         <div class="col-md-8">
-          <h2 class="titulo-impacto">Compartilhando
+          <h2 class="titulo-impacto">Repassando suas
             vivências.</h2>
           <div class="row mt-5 pt-5 d-flex justify-content-around">
             <div class="col-md-5 d-flex justify-content-center position-relative">
-              <img class="impacto-img img-fluid " src="https://i.imgur.com/dJjSOTo.jpg" alt="">
+              <img class="impacto-img img-fluid " src="https://i.imgur.com/WpTpez9.jpg" alt="">
               <div class="caixa-persona-2 box-color position-absolute"></div>
             </div>
             <div class="col-md-6 paragrafo-impacto">
@@ -172,7 +176,7 @@
       </div>
     </div>
   </section>
-  <section class="desenvolvedores">
+  <section class="desenvolvedores" id="desenvolvedores">
     <div class="row m-0 p-0  d-flex justify-content-center">
       <div class="col-md-6  d-flex justify-content-center">
         <h4>time de desenvolvedores</h4>
@@ -183,16 +187,18 @@
         <!-- <img src="https://i.imgur.com/g6JNNuB.png" alt=""> -->
         <h3>Fernando Merim</h3>
         <small>Dev. Full Stack Java Jr.</small>
-        <p>Formado em Ciências Contábeis e atualmente cursando Sistemas de Informação. Ser referência, fazer a diferença e simplificar a vida das pessoas através da tecnologia são os meus objetivos. </p>
-                 
+        <p>Formado em Ciências Contábeis e atualmente cursando Sistemas de Informação. Ser referência, fazer a diferença
+          e simplificar a vida das pessoas através da tecnologia são os meus objetivos. </p>
+
       </div>
-      
+
       <div class="col-md-3  d-flex align-items-center flex-column">
         <img src="https://i.imgur.com/7Y4FG5P.png" alt="">
         <h3>Gabriel Cassimiro</h3>
         <small>Dev. Full Stack Java Jr.</small>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown  </p>
-                    
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown </p>
+
       </div>
 
       <div class="col-md-3  d-flex align-items-center flex-column">
@@ -201,29 +207,30 @@
         <small>Dev. Full Stack Java Jr.</small>
         <p>Estudante de Análise e desenvolvimento de sistemas apaixonado por processos criativos, movido por idéias
           inovadoras e tudo que a tecnologia pode viabilizar </p>
-                    
+
       </div>
 
       <div class="col-md-3  d-flex align-items-center flex-column">
         <img src="https://i.imgur.com/7Y4FG5P.png" alt="">
         <h3>Luis Henrique de Sousa </h3>
         <small>Dev. Full Stack Java Jr.</small>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown  </p>
-                    
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown </p>
+
       </div>
-      
-      
+
+
     </div>
   </section>
 </div>
-<footer>
-  <h2>Place2Getter</h2>
-  <div class="redes-sociais">
-    <a href=""><i class="fab fa-google-plus"></i></a>
-    <a href=""> <i class="fab fa-github"></i></a>
-    <a href=""><i class="fab fa-facebook"></i></a>
+<footer class="position-relative footer">
+  <div class="row m-0 p-0  d-flex justify-content-center">
+    <div class="col-md-1  d-flex justify-content-center footer-logo">
+      <img src="https://i.imgur.com/SKyw9eR.png" alt="">
+    </div>
   </div>
 </footer>
+
 
 
 
