--- a/src/app/contato/contato.component.css
+++ b/src/app/contato/contato.component.css
@@ -101,6 +101,7 @@ img.img-vetor {
   border-radius: 50%;
   background: none;
   border: 3px solid #009d97;
+  box-shadow: 5px 15px 10px rgba(0, 0, 0, 0.089);
   position: absolute;
   bottom: -8.5%;
   left: -9%;
