--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -99,6 +99,10 @@ p.descricao {
   cursor: pointer;
 }
 
+.tab-menu i{
+  color: #66d8bd;
+}
+
 .nav-left {
   position: fixed;
   left: 0;
@@ -454,7 +458,7 @@ button.button-new-post:hover {
 .perfil-online {
   width: 15px;
   height: 15px;
-  background: rgb(29, 148, 29);
+  background: rgb(36, 197, 36);
   border-radius: 50%;
   top: 5px;
   left: 10px;
